2002-08-31  Darin Adler  <darin@apple.com>

	- fixed 3038336 -- repro crash in QTextDecoder trying to display UTF-16 file

        * kwq/mac-encodings.txt: Hook up the UTF-16 encoding to the name iso-10646-ucs-2.
	We have a long way to go to get this right. There are almost certainly going to
	be other bugs with 16-bit character pages.

        * kwq/KWQKHTMLSettings.mm: (KHTMLSettings::encoding): Just return "latin1",
	not "NSISOLatin1StringEncoding".

        * kwq/KWQString.mm: (QString::fromStringWithEncoding): Pass true for the
	"pay attention to BOM" flag.

        * khtml/rendering/render_object.cpp: Take out unneeded APPLE_CHANGES.

2002-08-30  Ken Kocienda  <kocienda@apple.com>

	Fixed a problem in this function where broken UTF-8 would cause a crash.

        * WebCore.pbproj/project.pbxproj:
        * kwq/KWQString.mm:
        (QString::fromStringWithEncoding)

2002-08-30  Richard Williamson (Home)  <rjw@apple.com>

        Removed debugging log.
        
        * kwq/KWQString.mm:
        (QString::fromStringWithEncoding):

2002-08-30  Richard Williamson (Home)  <rjw@apple.com>

        Made decoder more robust wrt nulls in content.  Changed use
        of QCString to null safe QString rather than modify
        content.
        
        * khtml/misc/decoder.cpp:
        (Decoder::decode):
        (Decoder::flush):
        * khtml/misc/decoder.h:
        * kwq/KWQString.mm:
        (QString::fromStringWithEncoding):

2002-08-30  Darin Adler  <darin@apple.com>

	- fixed 3027407 -- Console error refers to closed bug

        * kwq/KWQKHTMLPartImpl.mm: (KWQKHTMLPartImpl::bridgeForFrameName):
	Update bug number from 2959902 to 2942073.

	- fixed 3027532 -- can't tab into or out of textareas
	
        * kwq/KWQTextArea.h: Add setFont:.
        * kwq/KWQTextArea.mm:
        (-[KWQTextArea _createTextView]): Make a KWQTextAreaTextView.
        (-[KWQTextArea textDidChange:]): Send text changed messages when the text